<resources>
    <string name="app_name">安安运维1.0</string>
    <!--支付-->
    <string name="face_book_apiid">8a605283ec7b96f377e9acd6e46091d6</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <!--登录-->
    <string name="cancel_success">注销成功！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <!--图片选择部分-->
    <string name="all_image">所有图片</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="undo">撤消</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="preview">预览</string>
    <!--消息页面-->
    <string name="welcome_messages">您好,您有%2$d条新%1$s!消息，点击查看>></string>

    <!--主页-->
    <string name="USER">值机员</string>
    <string name="USER_MANAGER">甲方负责人</string>
    <string name="SERVICE_MAN">服务提供商</string>
    <string name="REPAIR_MAN">维修工</string>

    <!--用户-->
    <string name="user_main_repair1">新建工单</string>
    <string name="user_main_repair2">待审核</string>
    <string name="user_main_repair3">待确认</string>
    <string name="user_main_repair4">已完成</string>
    <string name="user_main_repair5">待评价</string>
    <!--用户管理员-->
    <string name="userManager_main_repair1">待审核</string>
    <string name="userManager_main_repair2">待确认</string>
    <string name="userManager_main_repair3">待支付</string>
    <string name="userManager_main_repair4">已完成</string>
    <string name="userManager_main_inspection1">巡检申请</string>
    <string name="userManager_main_inspection2">待审核</string>
    <string name="userManager_main_inspection3">执行中</string>
    <string name="userManager_main_inspection4">待确认</string>
    <string name="userManager_main_inspection5">待付款</string>
    <string name="userManager_main_manage1">全部成员</string>
    <string name="userManager_main_manage2">设备管理</string>
    <string name="userManager_main_manage3">故障统计</string>
    <!--维修工-->
    <string name="worker_main_repair1">待接单</string>
    <string name="worker_main_repair2">进行中</string>
    <string name="worker_main_repair3">已完成</string>
    <string name="worker_main_inspection1">待接单</string>
    <string name="worker_main_inspection2">巡检中</string>
    <string name="worker_main_inspection3">已完成</string>

    <!--服务商-->
    <string name="service_main_inspection1">待接单</string>
    <string name="service_main_inspection2">待分配</string>
    <string name="service_main_inspection3">巡检中</string>
    <string name="service_main_repair1">待接单</string>
    <string name="service_main_repair2">待分配</string>
    <string name="service_main_repair3">待审核</string>
    <string name="service_main_manage1">全部成员</string>
    <string name="service_main_manage2">设备管理</string>
    <string name="service_main_manage3">故障统计</string>
    <string name="login_again">角色不正确，请重新登陆！</string>
<!--介绍-->
<string name="intro_text1">安安运维是依托于北京安全防范行业协会，由安防系统维修维护运营中心直管的互联网运营平台。安安运维平台贯彻协会为会员服务，为行业服务，为政府服务，为社会服务的理念，通过整合优势资源，为有效提升安防系统效能提供综合服务。</string>
    <string name="intro_text2">我们的使命是立足于行业协会资源，规范行业作业流程，统一行业作业标准，变革行业作业模式。</string>
<string name="intro_text3">我们的愿景是成为安防系统效能提升综合解决方案提供商。</string>
    <string name="foot_text1">安安运维</string>
    <string name="foot_text2">安安运维·北京市安全防范行业协会</string>
    <string name="foot_text3">Copyright@2020 all Rights Resolved</string>
    <string name="question_submit_text1">如果您有任何想法或建议，请联系我: )</string>
    <string name="question_submit_text2">duanby@ananops.com</string>
    <string name="question_submit_text3">Created by ananops</string>
    <!--invoice-->
    <string name="necessary_add">*</string>
</resources>
