<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/introduction_title"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/basicinfo_back"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_deepblue"
            />
        <TextView
            android:layout_toRightOf="@+id/basicinfo_back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:text="关于"
            android:textStyle="bold"
            android:textColor="#353535"
            android:textSize="18sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#dbdbdb" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/intro_img"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="22sp"
                android:text="安安运维"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingStart="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/state_pressed"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="简介"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingStart="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@color/state_pressed"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="  官网：https://ananops.com"
                    android:textSize="18sp"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:text="@string/intro_text1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:text="@string/intro_text2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:text="@string/intro_text3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/state_pressed"
                    android:gravity="center"
                    android:text="@string/foot_text1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/state_pressed"
                    android:gravity="center"
                    android:text="@string/foot_text2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/state_pressed"
                    android:gravity="center"
                    android:text="@string/foot_text3"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>